[package]
name = "daab"
version = "0.3.1"
authors = ["cryptjar <cryptjar@junk.studio>", "dezajno <dezajno@junk.studio>"]
edition = "2018"
description = "DAG aware artifact builder"

repository = "https://github.com/CoffeJunkStudio/daab"
readme = "README.md"
#license = "Apache-2.0"
license-file = "LICENSE"

categories = ["caching", "data-structures"]
keywords = ["dag", "artifacts", "dependencies", "builders", "producers"]


[package.metadata.docs.rs]
all-features = true


[features]
default = []
diagnostics = []


[dependencies]
tynm = {version = "0.1.1", optional = true}


[dev-dependencies]
regex = "1.3"


