[package]
name = "daab"
version = "0.4.0"
authors = ["cryptjar <cryptjar@junk.studio>", "dezajno <dezajno@junk.studio>"]
edition = "2018"
description = "DAG aware artifact builder"

repository = "https://github.com/CoffeJunkStudio/daab"
readme = "README.md"
license = "Apache-2.0"
#license-file = "LICENSE"

categories = ["caching", "data-structures"]
keywords = ["dag", "artifacts", "dependencies", "builders", "producers"]


[package.metadata.docs.rs]
all-features = true


[features]
default = []
diagnostics = []
mut_box = [] # Considered Unstable! (subject to changes)
unsized = [] # Requires Nightly!
doc_cfg = [] # Requires Nightly!


[dependencies]
cfg-if = "0.1.10"
never = "0.1.0"
tynm = {version = "0.1.0", optional = true}


[dev-dependencies]
regex = "1.0"
pretty_assertions = "0.6.1"


